--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-contexify": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-modal-sheet": "^3.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "sonner": "^1.5.0"
